--- a/app/src/main/res/layout/explore.xml
+++ b/app/src/main/res/layout/explore.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/e_title"
-        android:layout_above="@id/etabs"
+        android:layout_above="@id/e_hsv"
         android:id="@+id/e_list"/>
 
     <HorizontalScrollView
@@ -38,14 +38,13 @@
         android:layout_height="wrap_content"
         android:scrollbars="none"
         android:layout_alignParentBottom="true"
+        android:visibility="gone"
         android:padding="@dimen/d10"
-        android:id="@+id/etabs">
+        android:id="@+id/e_hsv">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/e_hl"
-            android:visibility="gone"
             android:orientation="horizontal">
 
             <Button
